<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>ovh.excale.mc</groupId>
	<artifactId>xkuhc</artifactId>
	<version>3.0-DEVELOP</version>

	<name>xkUHC</name>
	<description>A simple single-instance UHC plugin</description>
	<url>http://mc.excale.ovh/</url>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<version.commandapi>8.2.0</version.commandapi>
	</properties>

	<repositories>

		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>

		<repository>
			<id>papermc</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>

	</repositories>

	<dependencies>

		<!-- Plugin core -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.18.2-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<!-- PaperMC integration -->
		<dependency>
			<groupId>io.papermc</groupId>
			<artifactId>paperlib</artifactId>
			<version>1.0.7</version>
			<scope>compile</scope>
		</dependency>

		<!-- CommandAPI -->
		<dependency>
			<groupId>dev.jorel</groupId>
			<artifactId>commandapi-core</artifactId>
			<version>${version.commandapi}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>dev.jorel</groupId>
			<artifactId>commandapi-annotations</artifactId>
			<version>${version.commandapi}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Discord integration -->
		<dependency>
			<groupId>com.discord4j</groupId>
			<artifactId>discord4j-core</artifactId>
			<version>3.2.2</version>
		</dependency>

		<!-- Better code -->
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>22.0.0</version>
		</dependency>

	</dependencies>

	<build>

		<finalName>${project.name}-${project.version}-nonshaded</finalName>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.3.0</version>

				<executions>
					<execution>
						<id>shade</id>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>

					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>your.main.class</mainClass>
								</transformer>
							</transformers>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/maven/**</exclude>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
							<relocations>
								<relocation>
									<pattern>io.netty</pattern>
									<shadedPattern>com.discord4j.shaded.io.netty</shadedPattern>
								</relocation>
								<relocation>
									<pattern>com.fasterxml</pattern>
									<shadedPattern>com.discord4j.shaded.com.fasterxml</shadedPattern>
								</relocation>
								<relocation>
									<pattern>io.papermc.lib</pattern>
									<shadedPattern>ovh.excale.mc.uhc.paperlib</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>

				<configuration>
					<outputFile>${project.build.directory}\${project.name}-${project.version}.jar</outputFile>
					<filters>
						<filter>
							<artifact>org.jetbrains:annotations</artifact>
							<excludes>
								<exclude>META-INF/*.MF</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
			</plugin>

		</plugins>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>src/main/resources-filtered</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

</project>